--- a/International Imamreza University /src/public/style.css
+++ b/International Imamreza University /src/public/style.css
@@ -133,6 +133,15 @@ label {
     src: url("./extras/Fonts/AvenirBook(Bold).otf");
 }
 
+@font-face {
+    font-family: "LilitaOne";
+    src: url("./extras//Fonts/LilitaOne-Regular.ttf");
+}
+
+#category_header {
+    font-family: "LilitaOne";
+}
+
 header {
     font-family: "AvenirBold";
     font-size: 2.2rem;
@@ -190,6 +199,13 @@ body {
 }
 .container {
     background-color: rgb(30, 30, 30);
+}
+
+#category_container {
+    flex-shrink: 5;
+}
+#task_container {
+    flex-shrink: 1;
 }
 
 .input input:focus,
